// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConverterSkeleton > 模式: multi > 匹配 multi 模式快照 1`] = `
<div
  class="space-y-4 animate-pulse"
  role="status"
>
  <div
    class="h-12 bg-slate-200 rounded-lg"
  />
  <div
    class="grid grid-cols-1 md:grid-cols-2 gap-4"
  >
    <div
      class="bg-white rounded-lg p-3 shadow-sm animate-pulse"
      role="status"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="flex items-center gap-2"
        >
          <div
            class="w-8 h-8 bg-slate-200 rounded-full"
          />
          <div
            class="space-y-1"
          >
            <div
              class="h-4 w-12 bg-slate-200 rounded"
            />
            <div
              class="h-3 w-20 bg-slate-200 rounded"
            />
          </div>
        </div>
        <div
          class="h-4 w-16 bg-slate-200 rounded"
        />
      </div>
    </div>
    <div
      class="bg-white rounded-lg p-3 shadow-sm animate-pulse"
      role="status"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="flex items-center gap-2"
        >
          <div
            class="w-8 h-8 bg-slate-200 rounded-full"
          />
          <div
            class="space-y-1"
          >
            <div
              class="h-4 w-12 bg-slate-200 rounded"
            />
            <div
              class="h-3 w-20 bg-slate-200 rounded"
            />
          </div>
        </div>
        <div
          class="h-4 w-16 bg-slate-200 rounded"
        />
      </div>
    </div>
    <div
      class="bg-white rounded-lg p-3 shadow-sm animate-pulse"
      role="status"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="flex items-center gap-2"
        >
          <div
            class="w-8 h-8 bg-slate-200 rounded-full"
          />
          <div
            class="space-y-1"
          >
            <div
              class="h-4 w-12 bg-slate-200 rounded"
            />
            <div
              class="h-3 w-20 bg-slate-200 rounded"
            />
          </div>
        </div>
        <div
          class="h-4 w-16 bg-slate-200 rounded"
        />
      </div>
    </div>
    <div
      class="bg-white rounded-lg p-3 shadow-sm animate-pulse"
      role="status"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="flex items-center gap-2"
        >
          <div
            class="w-8 h-8 bg-slate-200 rounded-full"
          />
          <div
            class="space-y-1"
          >
            <div
              class="h-4 w-12 bg-slate-200 rounded"
            />
            <div
              class="h-3 w-20 bg-slate-200 rounded"
            />
          </div>
        </div>
        <div
          class="h-4 w-16 bg-slate-200 rounded"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ConverterSkeleton > 模式: single > 匹配 single 模式快照 1`] = `
<div
  class="space-y-4 animate-pulse"
  role="status"
>
  <div
    class="grid grid-cols-1 md:grid-cols-2 gap-4"
  >
    <div
      class="h-14 bg-slate-200 rounded-lg"
    />
    <div
      class="h-14 bg-slate-200 rounded-lg"
    />
  </div>
  <div
    class="h-16 bg-purple-200 rounded-xl"
  />
</div>
`;

exports[`CurrencyCardSkeleton > 匹配設計快照 1`] = `
<div
  class="bg-white rounded-lg p-3 shadow-sm animate-pulse"
  role="status"
>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="flex items-center gap-2"
    >
      <div
        class="w-8 h-8 bg-slate-200 rounded-full"
      />
      <div
        class="space-y-1"
      >
        <div
          class="h-4 w-12 bg-slate-200 rounded"
        />
        <div
          class="h-3 w-20 bg-slate-200 rounded"
        />
      </div>
    </div>
    <div
      class="h-4 w-16 bg-slate-200 rounded"
    />
  </div>
</div>
`;

exports[`SkeletonLoader > 基本渲染 > 渲染所有主要區塊 1`] = `
<div
  aria-live="polite"
  class="min-h-screen bg-slate-50 p-4 md:p-6"
  role="status"
>
  <div
    class="mx-auto max-w-4xl space-y-6"
  >
    <div
      class="animate-pulse"
    >
      <div
        class="h-8 w-48 bg-slate-200 rounded-lg mb-2"
      />
      <div
        class="h-4 w-32 bg-slate-200 rounded"
      />
    </div>
    <div
      class="flex gap-2 mb-4 animate-pulse"
    >
      <div
        class="h-10 w-32 bg-slate-200 rounded-lg"
      />
      <div
        class="h-10 w-32 bg-slate-200 rounded-lg"
      />
    </div>
    <div
      class="bg-white rounded-2xl shadow-lg p-6 space-y-4 animate-pulse"
    >
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-4"
      >
        <div
          class="space-y-2"
        >
          <div
            class="h-4 w-16 bg-slate-200 rounded"
          />
          <div
            class="h-12 bg-slate-200 rounded-lg"
          />
        </div>
        <div
          class="space-y-2"
        >
          <div
            class="h-4 w-16 bg-slate-200 rounded"
          />
          <div
            class="h-12 bg-slate-200 rounded-lg"
          />
        </div>
      </div>
      <div
        class="space-y-2"
      >
        <div
          class="h-4 w-20 bg-slate-200 rounded"
        />
        <div
          class="h-14 bg-slate-200 rounded-lg"
        />
      </div>
      <div
        class="bg-purple-50 rounded-xl p-4 space-y-2"
      >
        <div
          class="h-6 w-full bg-purple-200 rounded"
        />
        <div
          class="h-4 w-3/4 bg-purple-200 rounded"
        />
      </div>
      <div
        class="flex gap-2 flex-wrap"
      >
        <div
          class="h-10 w-20 bg-slate-200 rounded-lg"
        />
        <div
          class="h-10 w-20 bg-slate-200 rounded-lg"
        />
        <div
          class="h-10 w-20 bg-slate-200 rounded-lg"
        />
        <div
          class="h-10 w-20 bg-slate-200 rounded-lg"
        />
      </div>
    </div>
    <div
      class="bg-white rounded-2xl shadow-lg p-6 animate-pulse"
    >
      <div
        class="h-4 w-32 bg-slate-200 rounded mb-4"
      />
      <div
        class="h-64 bg-slate-200 rounded-lg"
      />
    </div>
    <div
      class="bg-white rounded-2xl shadow-lg p-6 animate-pulse"
    >
      <div
        class="h-4 w-24 bg-slate-200 rounded mb-4"
      />
      <div
        class="grid grid-cols-2 md:grid-cols-3 gap-2"
      >
        <div
          class="h-12 bg-slate-200 rounded-lg"
        />
        <div
          class="h-12 bg-slate-200 rounded-lg"
        />
        <div
          class="h-12 bg-slate-200 rounded-lg"
        />
      </div>
    </div>
  </div>
  <span
    class="sr-only"
  >
    載入匯率資料中...
  </span>
</div>
`;
